// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenreItem disabled without onPress 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  disabled={true}
  style={
    Array [
      Object {
        "borderRadius": 4,
        "height": 234,
        "overflow": "hidden",
        "width": 234,
      },
    ]
  }
  testID="wrapper"
>
  <View
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Array [
          Object {
            "height": "100%",
            "position": "absolute",
            "width": "100%",
          },
        ],
      ]
    }
  >
    <FastImageView
      resizeMode="cover"
      source={
        Object {
          "uri": "url",
        }
      }
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#ffffff",
            "fontFamily": "GothamPro-Bold",
            "fontSize": 12,
            "lineHeight": 20,
            "position": "absolute",
            "textAlign": "center",
          },
        ]
      }
    >
      title
    </Text>
  </View>
</TouchableOpacity>
`;

exports[`GenreItem renders correctly 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  disabled={false}
  style={
    Array [
      Object {
        "borderRadius": 4,
        "height": 234,
        "overflow": "hidden",
        "width": 234,
      },
    ]
  }
  testID="wrapper"
>
  <View
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Array [
          Object {
            "height": "100%",
            "position": "absolute",
            "width": "100%",
          },
        ],
      ]
    }
  >
    <FastImageView
      resizeMode="cover"
      source={
        Object {
          "uri": "url",
        }
      }
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#ffffff",
            "fontFamily": "GothamPro-Bold",
            "fontSize": 12,
            "lineHeight": 20,
            "position": "absolute",
            "textAlign": "center",
          },
        ]
      }
    >
      title
    </Text>
  </View>
</TouchableOpacity>
`;

exports[`SelectableGenreItem renders correctly 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  style={
    Array [
      Object {
        "borderRadius": 4,
        "height": 234,
        "overflow": "hidden",
        "width": 234,
      },
    ]
  }
  testID="wrapper"
>
  <View
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Array [
          Object {
            "height": "100%",
            "position": "absolute",
            "width": "100%",
          },
        ],
      ]
    }
  >
    <FastImageView
      resizeMode="cover"
      source={
        Object {
          "uri": "url",
        }
      }
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </View>
  <Image
    source={
      Object {
        "testUri": "../../../src/assets/images/genres/genre_inactive.png",
      }
    }
    style={
      Array [
        Object {
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#ffffff",
            "fontFamily": "GothamPro-Bold",
            "fontSize": 12,
            "lineHeight": 20,
            "position": "absolute",
            "textAlign": "center",
          },
        ]
      }
    >
      title
    </Text>
  </View>
</TouchableOpacity>
`;

exports[`SelectableGenreItem renders correctly in selected state 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  style={
    Array [
      Object {
        "borderRadius": 4,
        "height": 234,
        "overflow": "hidden",
        "width": 234,
      },
    ]
  }
  testID="wrapper"
>
  <View
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Array [
          Object {
            "height": "100%",
            "position": "absolute",
            "width": "100%",
          },
        ],
      ]
    }
  >
    <FastImageView
      resizeMode="cover"
      source={
        Object {
          "uri": "url",
        }
      }
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </View>
  <Image
    isSelected={true}
    source={
      Object {
        "testUri": "../../../src/assets/images/genres/genre_active.png",
      }
    }
    style={
      Array [
        Object {
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#ffffff",
            "fontFamily": "GothamPro-Bold",
            "fontSize": 12,
            "lineHeight": 20,
            "position": "absolute",
            "textAlign": "center",
          },
        ]
      }
    >
      title
    </Text>
  </View>
</TouchableOpacity>
`;

exports[`SelectableGenreItem renders correctly with subgenres 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  style={
    Array [
      Object {
        "borderRadius": 4,
        "height": 234,
        "overflow": "hidden",
        "width": 234,
      },
    ]
  }
  testID="wrapper"
>
  <View
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Array [
          Object {
            "height": "100%",
            "position": "absolute",
            "width": "100%",
          },
        ],
      ]
    }
  >
    <FastImageView
      resizeMode="cover"
      source={
        Object {
          "uri": "url",
        }
      }
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </View>
  <Image
    isSelected={true}
    source={
      Object {
        "testUri": "../../../src/assets/images/genres/genre_active.png",
      }
    }
    style={
      Array [
        Object {
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#ffffff",
            "fontFamily": "GothamPro-Bold",
            "fontSize": 12,
            "lineHeight": 20,
            "position": "absolute",
            "textAlign": "center",
          },
        ]
      }
    >
      title
    </Text>
  </View>
  <TouchableOpacity
    activeOpacity={0.8}
    style={
      Array [
        Object {
          "backgroundColor": "#ffffff",
          "paddingVertical": 12,
        },
      ]
    }
    testID="optionalChild"
  >
    <Text
      style={
        Array [
          Object {
            "color": "#C461DD",
            "fontFamily": "GothamPro",
            "fontSize": 14,
            "lineHeight": 14,
            "textAlign": "center",
          },
        ]
      }
    >
      + Поджанры
    </Text>
  </TouchableOpacity>
</TouchableOpacity>
`;
